...
}

public class GoalAchievedAgentCommand : AgentCommand {
  override val actionName: String = "GoalAchieved"

  override fun stepLogText(): String {
    return "Goal achieved"
  }

  override fun runOrchestraCommand(device: ArbiterDevice) {
  }

  public companion object : AgentCommandType {
...
